# meridian

./: .gitignore  .yarnrc.yml  AGENTS.md  Anchor.toml  Cargo.toml  JPY_STABLECOIN_PROJECT.md  README.ja.md  README.md  REVIVAL.md  package-lock.json  package.json  pitch-deck.html
app/: next.config.ts  package.json  tailwind.config.ts
app/api/v1/jpy/compliance/: route.ts
app/api/v1/jpy/mint/: route.ts
app/api/v1/swap/: route.ts
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/admin/: layout.tsx  page.tsx
app/src/app/admin/kyc/: page.tsx
app/src/app/admin/requests/: page.tsx
app/src/app/api/v1/admin/kyc/: route.ts
app/src/app/api/v1/admin/kyc/[wallet]/approve/: route.ts
app/src/app/api/v1/admin/kyc/[wallet]/reject/: route.ts
app/src/app/api/v1/admin/requests/: route.ts
app/src/app/api/v1/admin/requests/[id]/approve/: route.ts
app/src/app/api/v1/admin/requests/[id]/execute/: route.ts
app/src/app/api/v1/admin/requests/[id]/reject/: route.ts
app/src/app/api/v1/jpy/balance/: route.ts
app/src/app/api/v1/jpy/mint/: route.ts
app/src/app/api/v1/kyc/: route.ts
app/src/app/api/v1/stablecoin/balance/: route.ts
app/src/app/api/v1/stablecoin/compliance/: route.ts
app/src/app/api/v1/stablecoin/mint/: route.ts
app/src/app/api/v1/swap/: route.ts
app/src/app/api/v1/transactions/: route.ts
app/src/app/components/: Navigation.tsx
app/src/app/dashboard/: layout.tsx  page.tsx
app/src/app/dashboard/compliance/: page.tsx
app/src/app/dashboard/mint/: page.tsx
app/src/app/dashboard/portfolio/: page.tsx
app/src/app/dashboard/trade/: page.tsx
app/src/app/lib/: demo.ts  store.ts
app/src/lib/: errors.ts
app/src/lib/i18n/: en.ts  index.ts  ja.ts
benchmarks/: zk-proof-bench.ts
circuits/compliance_proof/: Nargo.toml
circuits/compliance_proof/src/: main.nr
cli/: meridian.config.json  package.json
cli/src/: cli.ts  config.ts  context.ts  format.ts  validation.ts
cli/src/commands/kyc/: blacklist-add.ts  blacklist-remove.ts  init-registry.ts  show-blacklist.ts  show-registry.ts  show-whitelist.ts  whitelist-add.ts  whitelist-remove.ts
cli/src/commands/shield/: init.ts  show-config.ts  show-receipt.ts  update-config.ts
cli/src/commands/stablecoin/: burn.ts  init-roles.ts  init-vault.ts  init.ts  mint.ts  pause.ts  register-issuer.ts  seize.ts  show-config.ts  show-issuer.ts  show-vault.ts
cli/src/commands/zk/: init.ts  revoke.ts  show-attestation.ts  show-config.ts  toggle.ts
cli/src/idl/: meridian_stablecoin.json  transfer_hook.json
docs/: trust-scheme-legal.md
docs/tasks/: 001-shield-escrow-attestor-cosign.md  002-custos-attestor-service.md
prisma/: schema.prisma
programs/compliant-registry/: Cargo.toml
programs/compliant-registry/src/: errors.rs  lib.rs  state.rs
programs/meridian-jpy/: Cargo.toml
programs/meridian-jpy/src/: errors.rs  lib.rs
programs/meridian-jpy/src/instructions/: burn.rs  initialize.rs  mint.rs  mod.rs  pause.rs  transfer.rs
programs/meridian-jpy/src/state/: collateral_vault.rs  issuer.rs  mint_config.rs
programs/meridian-stablecoin/: Cargo.toml
programs/meridian-stablecoin/src/: errors.rs  lib.rs
programs/meridian-stablecoin/src/instructions/: burn.rs  collateral.rs  initialize.rs  issuer.rs  mint.rs  mod.rs  roles.rs  seize.rs  transfer.rs
programs/meridian-stablecoin/src/state/: collateral_vault.rs  issuer.rs  mint_config.rs  mod.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/rwa-registry/: Cargo.toml
programs/rwa-registry/src/: lib.rs
programs/securities-engine/: Cargo.toml
programs/securities-engine/src/: lib.rs
programs/securities-engine/src/state/: market.rs  mod.rs  order.rs  pool.rs  position.rs
programs/shield-escrow/: Cargo.toml
programs/shield-escrow/src/: errors.rs  lib.rs
programs/shield-escrow/src/instructions/: deposit.rs  execute_swap.rs  initialize.rs  mod.rs  refund.rs  update_config.rs  withdraw.rs
programs/shield-escrow/src/state/: mod.rs  shield_config.rs  swap_receipt.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
programs/transfer-hook/src/state/: kyc_registry.rs  mod.rs  whitelist.rs
programs/zk-verifier/: Cargo.toml
programs/zk-verifier/src/: errors.rs  lib.rs
programs/zk-verifier/src/instructions/: check_attestation.rs  initialize.rs  mod.rs  revoke_attestation.rs  toggle_active.rs  update_verification_key.rs  verify_proof.rs
programs/zk-verifier/src/state/: compliance_attestation.rs  mod.rs  verifier_config.rs
scripts/: demo-devnet.ts  deploy.sh  keeper.ts  record-cli-demo.ts  record-dashboard-demo.ts  seed.ts  setup.sh
services/attestor/: Cargo.toml
services/attestor/src/: custos_reexecutor.rs  lib.rs  main.rs
tests/programs/: meridian-jpy.ts  meridian-stablecoin.ts  oracle.ts  rwa-registry.ts  securities-engine.ts  shield-escrow.ts  transfer-hook.ts  zk-verifier.ts
tests/z-integration/: sss-presets.ts
