[workspace]
members = [
    "programs/meridian-stablecoin",
    "programs/transfer-hook",
    "programs/securities-engine",
    "programs/rwa-registry",
    "programs/oracle",
    "programs/compliant-registry"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = "7.0.0"
spl-transfer-hook-interface = "0.8.2"
solana-program = "2.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
