[workspace]
members = [
    "programs/meridian-stablecoin",
    "programs/securities-engine",
    "programs/rwa-registry",
    "programs/oracle",
    "programs/shield-escrow",
    "programs/zk-verifier",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8.2"
solana-program = "2.2.1"
accredit-types = { git = "https://github.com/fabrknt/accredit.git", tag = "v1.0.0" }

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
