[package]
name = "compliant-registry"
version = "0.1.0"
description = "Compliance-aware pool registry for institutional DeFi routing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliant_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
