[package]
name = "meridian-jpy"
version = "0.1.0"
description = "JPY Stablecoin with Token-2022 Extensions - Trust-type Electronic Payment Method (信託型3号電子決済手段)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meridian_jpy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
