[package]
name = "meridian-stablecoin"
version = "0.1.0"
description = "Stablecoin with Token-2022 Extensions - Compliant Electronic Payment Method"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meridian_stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
