[package]
name = "rwa-registry"
version = "0.1.0"
description = "RWA Registry for Tokenized Real-World Assets - Securities, Real Estate, Commodities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
