[package]
name = "shield-escrow"
version = "0.1.0"
description = "Compliant Shield Escrow - KYC-whitelisted intermediary for hybrid liquidity routing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shield_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
